--- a/_pages/404.md
+++ b/_pages/404.md
@@ -6,5 +6,7 @@ sitemap: false
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist.
+![]({{ site.url }}{{ site.baseurl }}/images/404.jpg){: style="width: 1000px; float: left;margin-right: 20px; border: 10px"}
+
+<!-- Sorry, but the page you were trying to view does not exist. -->
 
